-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
3
-
9223372036854775807
Lustre mounts do not support SELinux context options to allow applying an SELinux context across the entire mount.
Steps to Reproduce
1. Install CentOS 6 based Lustre client with default SELinux configuration
2. Attempt to mount Lustre volume with SELinux context
# mount -t lustre -o context=system_u:object_r:user_home_t:s0 mds@tcp:/testfs /mnt/
3. Error message is produced:
mount.lustre: mount mds@tcp:/testfs at /mnt failed: Invalid argument This may have multiple causes. Is 'testfs' the correct filesystem name? Are the mount options correct? Check the syslog for more info.\
Syslog messages:
LNet: Added LNI 192.168.122.120@tcp [8/256/0/180]
LNet: Accept secure, port 988
LustreError: 152-6: Unknown option 'context="system_u:object_r:user_home_t:s0"', won't mount.
Lustre: Unmounted testfs-client
LustreError: 1265:0:(obd_mount.c:1342:lustre_fill_super()) Unable to mount (-22)